add nodemon package

--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "clean-db": "rm database.db #remove the old database",
     "build-db-win": "sqlite3 database.db < db_schema.sql",
     "clean-db-win": "del database.db",
-    "start": "node index.js"
+    "start": "node index.js",
+    "start-nodemon": "nodemon index.js"
   },
   "author": "Simon Katan",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  },
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
