--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "sqlite3": "^5.1.2"
   },
-  "engines" : { 
-    "npm" : ">=8.0.0",
-    "node" : ">=16.0.0"
+  "engines": {
+    "npm": ">=8.0.0",
+    "node": ">=16.0.0"
   }
 }
